--- a/audit/PKGBUILD
+++ b/audit/PKGBUILD
@@ -11,7 +11,7 @@
 pkgbase=audit
 pkgname=(audit python-audit)
 pkgver=3.0.8
-pkgrel=1
+pkgrel=1.1
 pkgdesc='Userspace components of the audit framework'
 url='https://people.redhat.com/sgrubb/audit'
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -21,15 +21,20 @@ options=(debug emptydirs)
 source=(
   https://people.redhat.com/sgrubb/audit/$pkgname-$pkgver.tar.gz
   $pkgbase-3.0.8-config_paths.patch
+  $pkgbase-3.0.8-linux-headers-5.17.patch
 )
 sha512sums=('8379bf425d68381d182300e628e42de8460d2f3e15b2395e10880f94b9989656852a50a9bece75b632ec8a04c40c9e666ff4c9d6b25ace3a8f50d2011506afab'
-            'bc699123f810abcf9300728bf61d7fcfcc83677b75fbeb713fb24cc11b2f9edf687661aab70766acde7c3c41c6a62f8e0a54cdfb49d1c7ce2246b67fbe3feec5')
+            'bc699123f810abcf9300728bf61d7fcfcc83677b75fbeb713fb24cc11b2f9edf687661aab70766acde7c3c41c6a62f8e0a54cdfb49d1c7ce2246b67fbe3feec5'
+            '76a7f958c1523f3441ad9206f1bc58e71d81f992f64c06c69f705c8bdc535dff5078fcf89b93b195fb8a437079f27f0b75b7b1a2f12c16be309daec108b6c72b')
 b2sums=('38a35a7540e608127cfc54a2de2cb12df8c29e778799ca53318824c84565a67b7ea131f9bba455fa469ce9139a27908738f571a6e383ce9a3274f70c09d27ec7'
-        '50be1b4f76ace20d8d14b4c57a9bb69daa3da35fd654aca8730bc287682fe38f1c1917b37469fb087daf9f309ffc15cca15f54166ece0a055f540c2604778fc6')
+        '50be1b4f76ace20d8d14b4c57a9bb69daa3da35fd654aca8730bc287682fe38f1c1917b37469fb087daf9f309ffc15cca15f54166ece0a055f540c2604778fc6'
+        '15d82a6c7c964f14414ca34ed09d4251c331497e9aae1f0cbb54398bef02a5be0eadbdee90b3bb26ac90e8b9825bdb09c01bfcea61cd99b905f508c08578a9ba')
 
 prepare() {
+  cd $pkgbase-$pkgver
   # replace the use of /sbin with /usr/bin in configs
-  patch -Np1 -d $pkgbase-$pkgver -i ../$pkgbase-3.0.8-config_paths.patch
+  patch -Np1 -i ${srcdir}/$pkgbase-3.0.8-config_paths.patch
+  patch -Np1 -i ${srcdir}/$pkgbase-3.0.8-linux-headers-5.17.patch
 }
 
 build() {
