--- a/llvm/PKGBUILD
+++ b/llvm/PKGBUILD
@@ -4,10 +4,9 @@
 
 pkgname=('llvm' 'llvm-libs' 'llvm-ocaml')
 pkgver=13.0.1
-pkgrel=2.1
+pkgrel=6
 _ocaml_ver=4.13.1
 arch=(x86_64 powerpc64le powerpc riscv64)
-arch=(riscv64)
 url="https://llvm.org/"
 license=('custom:Apache 2.0 with LLVM Exception')
 makedepends=('cmake' 'ninja' 'libffi' 'libedit' 'ncurses' 'libxml2'
@@ -18,9 +17,11 @@ options=('staticlibs' '!lto') # Getting thousands of test failures with LTO
 _source_base=https://github.com/llvm/llvm-project/releases/download/llvmorg-$pkgver
 source=($_source_base/$pkgname-$pkgver.src.tar.xz{,.sig}
         don-t-accept-nullptr-as-GEP-element-type.patch
-        no-strict-aliasing-DwarfCompileUnit.patch
-        disable-bswap-for-spir.patch
+        don-t-override-__attribute__-no_stack_protector.patch
         don-t-move-DBG_VALUE-instructions.patch
+        no-strict-aliasing-DwarfCompileUnit.patch
+        disable-A-B-A-B-and-BSWAP-in-InstCombine.patch
+        disable-DIArgList-in-SPIR-V.patch
         llvm-config.h
         build-any.patch
         riscv-generic.patch
@@ -28,9 +29,11 @@ source=($_source_base/$pkgname-$pkgver.src.tar.xz{,.sig}
 sha256sums=('ec6b80d82c384acad2dc192903a6cf2cdbaffb889b84bfb98da9d71e630fc834'
             'SKIP'
             'a7e902a7612d0fdabe436a917468b043cc296bc89d8954bfc3126f737beb9ac4'
-            'd1eff24508e35aae6c26a943dbaa3ef5acb60a145b008fd1ef9ac6f6c4faa662'
-            'af163392fbc19d65d11ab4b1510a2eae39b417d6228023b3ba5395b138bb41f5'
+            '9f0a4578b94eb8853b83af2f65e92705254b4b56d96f9a941714d174b932f465'
             'f7d69f84241416398fdb3df8bb44f9fae3c49d89889c7ffa3b37aa2e9d78f708'
+            'd1eff24508e35aae6c26a943dbaa3ef5acb60a145b008fd1ef9ac6f6c4faa662'
+            '34cc0d79a30599cb2287b47b4e9a1a5bf03d57a1f8bb35be3fe976ffc4a604f6'
+            '8642da2d556092e4284873ba6ddc6c9a67841f42cc16f923bcd523e4b304a3ff'
             '597dc5968c695bbdbb0eac9e8eb5117fcd2773bc91edf5ec103ecffffab8bc48'
             'fa49cb1e9107d8d151a419d3c09f231f9fa42b8ea77a87de0392b44a7ea0076e'
             '5c53e41a4011e7c65c43ed3871c09b544df9f73e35d09914d4463b2f9103b84e'
@@ -45,16 +48,22 @@ prepare() {
   # https://github.com/intel/intel-graphics-compiler/issues/204
   patch -Rp2 -i ../don-t-accept-nullptr-as-GEP-element-type.patch
 
-  # Work around intermittent 'clang -O -g' crashes
-  # https://bugs.llvm.org/show_bug.cgi?id=50611#c3
-  patch -Np2 -i ../no-strict-aliasing-DwarfCompileUnit.patch
+  # Fixes Chromium error "*** stack smashing detected ***: terminated"
+  # (which also goes away with "--change-stack-guard-on-fork=disabled")
+  # https://reviews.llvm.org/D116589
+  patch -Np2 -i ../don-t-override-__attribute__-no_stack_protector.patch
 
   # https://github.com/llvm/llvm-project/issues/53243
   # https://github.com/rust-lang/rust/issues/92869
   patch -Np2 -i ../don-t-move-DBG_VALUE-instructions.patch
 
-  # Fix an ISPC build failure (https://github.com/ispc/ispc/issues/2189)
-  patch -Np2 -i ../disable-bswap-for-spir.patch
+  # Work around intermittent 'clang -O -g' crashes
+  # https://bugs.llvm.org/show_bug.cgi?id=50611#c3
+  patch -Np2 -i ../no-strict-aliasing-DwarfCompileUnit.patch
+
+  # Patches needed for ISPC for Xe only
+  patch -Np2 -i ../disable-A-B-A-B-and-BSWAP-in-InstCombine.patch
+  patch -Np2 -i ../disable-DIArgList-in-SPIR-V.patch
 
   patch -Np1 -i ${srcdir}/build-any.patch
   patch -Np1 -i ${srcdir}/riscv-generic.patch
@@ -66,22 +75,24 @@ prepare() {
 build() {
   cd "$srcdir/llvm-$pkgver.src/build"
 
-  cmake .. -G Ninja \
-    -DCMAKE_BUILD_TYPE=Release \
-    -DCMAKE_INSTALL_PREFIX=/usr \
-    -DCMAKE_SKIP_RPATH=ON \
-    -DLLVM_HOST_TRIPLE=$CHOST \
-    -DLLVM_BUILD_LLVM_DYLIB=ON \
-    -DLLVM_LINK_LLVM_DYLIB=ON \
-    -DLLVM_INSTALL_UTILS=ON \
-    -DLLVM_ENABLE_RTTI=ON \
-    -DLLVM_ENABLE_FFI=ON \
-    -DLLVM_BUILD_TESTS=ON \
-    -DLLVM_BUILD_DOCS=ON \
-    -DLLVM_ENABLE_SPHINX=ON \
-    -DLLVM_ENABLE_DOXYGEN=OFF \
-    -DSPHINX_WARNINGS_AS_ERRORS=OFF \
+  local cmake_args=(
+    -G Ninja
+    -DCMAKE_BUILD_TYPE=Release
+    -DCMAKE_INSTALL_PREFIX=/usr
+    -DCMAKE_SKIP_RPATH=ON
     -DLLVM_BINUTILS_INCDIR=/usr/include
+    -DLLVM_BUILD_DOCS=ON
+    -DLLVM_BUILD_LLVM_DYLIB=ON
+    -DLLVM_BUILD_TESTS=ON
+    -DLLVM_ENABLE_FFI=ON
+    -DLLVM_ENABLE_RTTI=ON
+    -DLLVM_ENABLE_SPHINX=ON
+    -DLLVM_HOST_TRIPLE=$CHOST
+    -DLLVM_INSTALL_UTILS=ON
+    -DLLVM_LINK_LLVM_DYLIB=ON
+    -DSPHINX_WARNINGS_AS_ERRORS=OFF
+  )
+  cmake .. "${cmake_args[@]}"
   ninja all ocaml_doc
 }
 
@@ -102,9 +113,6 @@ package_llvm() {
   pushd ../utils/lit
   python3 setup.py install --root="$pkgdir" -O1
   popd
-
-  # Remove documentation sources
-  rm -r "$pkgdir"/usr/share/doc/$pkgname/html/{_sources,.buildinfo}
 
   # The runtime libraries go into llvm-libs
   mv -f "$pkgdir"/usr/lib/lib{LLVM,LTO,Remarks}*.so* "$srcdir"
