--- a/xfce4/thunar-archive-plugin/PKGBUILD
+++ b/xfce4/thunar-archive-plugin/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=thunar-archive-plugin
 pkgver=0.5.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Adds archive operations to the Thunar file context menus"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/xfce/thunar/archive"
@@ -13,6 +13,7 @@ groups=('xfce4-goodies')
 depends=('thunar' 'hicolor-icon-theme')
 makedepends=('intltool' 'xfce4-dev-tools')
 optdepends=('file-roller' 'engrampa' 'ark' 'xarchiver')
+options=('debug')
 source=(https://archive.xfce.org/src/thunar-plugins/$pkgname/${pkgver%.*}/$pkgname-$pkgver.tar.bz2)
 sha256sums=('8eca88a358282a5acdea72984db0d930efdf658b4bc5b82ef7bcd06224366ffa')
 
