--- a/xfce4/xfce4-taskmanager/PKGBUILD
+++ b/xfce4/xfce4-taskmanager/PKGBUILD
@@ -2,29 +2,22 @@
 # Maintainer: Evangelos Foutras <evangelos@foutrelis.com>
 
 pkgname=xfce4-taskmanager
-pkgver=1.5.2.201.g58cf9b2
+pkgver=1.5.4
 pkgrel=1
 pkgdesc="Easy to use task manager"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/apps/xfce4-taskmanager"
 license=('GPL2')
 depends=('libxfce4ui' 'xfconf' 'libxmu' 'libwnck3')
-makedepends=('intltool' 'git' 'xfce4-dev-tools')
+makedepends=('intltool')
 groups=('xfce4-goodies')
-#source=(https://archive.xfce.org/src/apps/$pkgname/${pkgver%.*}/$pkgname-$pkgver.tar.bz2)
-_commit=58cf9b2694d539a4066517a7e2ac88587b1b5937
-source=(git+https://gitlab.xfce.org/apps/xfce4-taskmanager.git#commit=$_commit)
-sha256sums=('SKIP')
-
-pkgver() {
-  cd $pkgname
-  git describe --long | sed "s/^$pkgname-//;s/-/./g"
-}
+source=(https://archive.xfce.org/src/apps/$pkgname/${pkgver%.*}/$pkgname-$pkgver.tar.bz2)
+sha256sums=('25b13e890d14ce453ece19eb6201b4a9a4f3e3b324b947db9047ce79cc3ae62a')
 
 build() {
-  cd $pkgname
+  cd $pkgname-$pkgver
 
-  ./autogen.sh \
+  ./configure \
     --prefix=/usr \
     --sysconfdir=/etc \
     --localstatedir=/var \
@@ -33,7 +26,7 @@ build() {
 }
 
 package() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   make DESTDIR="$pkgdir" install
 }
 
