--- a/alsa-ucm-conf/PKGBUILD
+++ b/alsa-ucm-conf/PKGBUILD
@@ -3,23 +3,23 @@
 # Contributor: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
 
 pkgname=alsa-ucm-conf
-pkgver=1.2.6.3
+pkgver=1.2.7.1
 pkgrel=1
 pkgdesc="ALSA Use Case Manager configuration (and topologies)"
 arch=(any)
 url="https://alsa-project.org/"
 license=(BSD)
-source=("https://www.alsa-project.org/files/pub/lib/${pkgname}-${pkgver}.tar.bz2"{,.sig})
-sha512sums=('14031173dd9b44c506f13172fcf89d1119e4b2d409a749ec8ef4948e75231a5e5091206e826dff9e70f1f803de8cfb9fd94886ef70764c705f65c1c7ebdf649f'
+source=(https://www.alsa-project.org/files/pub/lib/$pkgname-$pkgver.tar.bz2{,.sig})
+sha512sums=('e2ade1b4f4d26cfb77fb423b82b7eea1b51bbb4857b771acb845da3f3f99c846ec28a415eb184c7d79ffbe1edf21f026951778f905e23658d78deaebb1315759'
             'SKIP')
-b2sums=('c14e50f2bcf95fbc038d3b2b5801850d4d22ab041fdb57dd9f4b161a748326671687585279801a9d3f803abd3d253d86b6b3e891e8c3024c5641f8a24ccccbb7'
+b2sums=('72a58b3eb927549ca1433d1249cb43723dd26bf6ce2e72713859c81d2b56388c99d03e028f0e27952dad6296e7efe7e94744cb37150b56b9985d99cee8d53388'
         'SKIP')
 validpgpkeys=('F04DF50737AC1A884C4B3D718380596DA6E59C91') # ALSA Release Team (Package Signing Key v1) <release@alsa-project.org>
 
 package() {
-  cd "${pkgname}-${pkgver}"
-  install -vdm 755 "${pkgdir}/usr/share/alsa/"
-  cp -av ucm2 "${pkgdir}/usr/share/alsa/"
+  cd $pkgname-$pkgver
+  install -vdm 755 "$pkgdir/usr/share/alsa/"
+  cp -av ucm2 "$pkgdir/usr/share/alsa/"
   install -vDm 644 LICENSE -t "$pkgdir/usr/share/licenses/$pkgname"
   install -vDm 644 README.md -t "$pkgdir/usr/share/doc/$pkgname"
   install -vDm 644 ucm2/README.md -t "$pkgdir/usr/share/doc/$pkgname/ucm2"
