--- a/kde/kdav/PKGBUILD
+++ b/kde/kdav/PKGBUILD
@@ -2,18 +2,18 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kdav
-pkgver=5.93.0
+pkgver=5.95.0
 pkgrel=1
 epoch=1
 pkgdesc='A DAV protocol implemention with KJobs'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
-depends=(kio qt5-xmlpatterns)
+depends=(kio)
 makedepends=(extra-cmake-modules doxygen qt5-tools)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('a7d3d40120f0a1b20f8492ea1635507a95e041582f5496a133de24720934ad68'
+sha256sums=('757dbd3d25f78e2386d2990f98536f361c6a4c258b13ac36b3c06bb903244f27'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 options=(debug)
