--- a/kde/discover/PKGBUILD
+++ b/kde/discover/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org> 
 
 pkgname=discover
-pkgver=5.24.4
+pkgver=5.25.1
 pkgrel=1
 pkgdesc='KDE and Plasma resources management GUI'
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -12,11 +12,11 @@ depends=(knewstuff kitemmodels kcmutils kidletime qt5-graphicaleffects appstream
          hicolor-icon-theme kirigami2 discount kuserfeedback)
 makedepends=(extra-cmake-modules plasma-framework packagekit-qt5 flatpak)
 makedepends_x86_64=(fwupd)
-optdepends=('packagekit-qt5: to manage packages from Arch Linux repositories' 'flatpak: Flatpak packages support'
-            'fwupd: firmware update support')
+optdepends=('packagekit-qt5: to manage packages from Arch Linux repositories' 'flatpak: Flatpak packages support')
+optdepends_x86_64=('fwupd: firmware update support')
 groups=(plasma)
-source=(https://download.kde.org/stable/plasma/${pkgver}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('29291e0b2d2208991a0d4f4521304336016c1d1b605622a3807243168af6b06a'
+source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
+sha256sums=('3a716ef8273a456fa1d38d7a17b64303204c89ec5356858bdcf9d2ee3089f5b2'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
