--- a/kde/bluedevil/PKGBUILD
+++ b/kde/bluedevil/PKGBUILD
@@ -4,12 +4,11 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=bluedevil
-pkgver=5.24.4
+pkgver=5.25.1
 pkgrel=1
 epoch=1
 pkgdesc='Integrate the Bluetooth technology within KDE workspace and applications'
-arch=(x86_64 powerpc64le powerpc)
-arch=(riscv64)
+arch=(riscv64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(GPL2)
 depends=(bluez-qt kdeclarative)
@@ -17,7 +16,7 @@ makedepends=(extra-cmake-modules plasma-framework)
 optdepends=('pulseaudio-bluetooth: to connect to A2DP profile')
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('83778e9cd952c6efeb786395d3fb9f5d4e6aa65d2ef2bc02ad7d256a3201f0d6'
+sha256sums=('6f844bced6ea7ebc84d9db4a6c81abd1dd08dd85326be0ccdd7a9049c5efabb9'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
