--- a/kde/drkonqi/PKGBUILD
+++ b/kde/drkonqi/PKGBUILD
@@ -2,17 +2,17 @@
 # Maintainer:Antonio Rojas <arojas@archlinux.org>
 
 pkgname=drkonqi
-pkgver=5.24.4
+pkgver=5.25.1
 pkgrel=1
 pkgdesc='The KDE crash handler'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(GPL2)
-depends=(kidletime kio syntax-highlighting gdb)
+depends=(kidletime syntax-highlighting kdeclarative kirigami2 kitemmodels gdb)
 makedepends=(extra-cmake-modules)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('a0a794c486d714daec18e8b056e86167cb13281f6588a8810eb55b6e91f4c7fa'
+sha256sums=('c0b7e1d7949d629617abdde9aafd6704ddb2b66a253cceaa07ab45a055ffea90'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
