--- a/kde/plasma-integration/PKGBUILD
+++ b/kde/plasma-integration/PKGBUILD
@@ -3,17 +3,17 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=plasma-integration
-pkgver=5.24.4
+pkgver=5.25.1
 pkgrel=1
 pkgdesc='Qt Platform Theme integration plugins for the Plasma workspaces'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
 depends=(kio kwayland libxcursor noto-fonts ttf-hack qqc2-desktop-style perl)
-makedepends=(extra-cmake-modules breeze)
+makedepends=(extra-cmake-modules breeze plasma-wayland-protocols)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('73d4993d2c7aeabbb068e8d28821566d04f2dcb882dd1d92feadc2062b3b4db4'
+sha256sums=('f2b132b0374e21eb5c49c4871336d85f1c5ed3fcf36b8bf4960b8959ae5cb727'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
