--- a/kde/breeze/PKGBUILD
+++ b/kde/breeze/PKGBUILD
@@ -4,19 +4,19 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=breeze
-pkgver=5.24.4
+pkgver=5.25.1
 pkgrel=1
 arch=(x86_64 powerpc64le powerpc riscv64)
 pkgdesc='Artwork, styles and assets for the Breeze visual style for the Plasma Desktop'
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
-depends=(frameworkintegration kdecoration breeze-icons kwayland hicolor-icon-theme)
+depends=(frameworkintegration kdecoration breeze-icons kwayland kirigami2 hicolor-icon-theme)
 makedepends=(extra-cmake-modules kcmutils)
 optdepends=('breeze-gtk: Breeze widget style for GTK applications'
             'kcmutils: for breeze-settings')
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('e369ee21e6aab1d5e3ae222ecd84bdb59f3d29ce3b61965b498bbfe84c949805'
+sha256sums=('502b88efa1c220639d940bd1e397ee83d82c041e2367e5ece978b8dad6ee1c8f'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
