--- a/kde/kwin/PKGBUILD
+++ b/kde/kwin/PKGBUILD
@@ -4,20 +4,21 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kwin
-pkgver=5.24.4
+pkgver=5.25.1
 pkgrel=1
 pkgdesc='An easy to use, but flexible, composited Window Manager'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
-depends=(kscreenlocker xcb-util-cursor plasma-framework kcmutils kwayland-server breeze
-         pipewire-session-manager libqaccessibilityclient lcms2)
-makedepends=(extra-cmake-modules qt5-tools kdoctools krunner)
+depends=(kscreenlocker xcb-util-cursor plasma-framework kcmutils breeze
+         pipewire-session-manager libqaccessibilityclient lcms2 libxcvt)
+makedepends=(extra-cmake-modules qt5-tools kdoctools krunner wayland-protocols plasma-wayland-protocols python)
 optdepends=('maliit-keyboard: virtual keyboard for kwin-wayland')
+replaces=(kwayland-server)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
 install=$pkgname.install
-sha256sums=('e2142321a9b1189665354838a66baeb2189235b705efca2364777bc3a3698ce3'
+sha256sums=('1d39953c907c71411eb870ce2039501abb84ce202e8c226b6372227e436f3ceb'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
