--- a/kde/plasma-workspace/PKGBUILD
+++ b/kde/plasma-workspace/PKGBUILD
@@ -6,8 +6,8 @@
 
 pkgbase=plasma-workspace
 pkgname=(plasma-workspace plasma-wayland-session)
-pkgver=5.24.4
-pkgrel=2
+pkgver=5.25.1
+pkgrel=1
 pkgdesc='KDE Plasma Workspace'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
@@ -15,11 +15,11 @@ license=(LGPL)
 depends=(knotifyconfig ksystemstats ktexteditor libqalculate kde-cli-tools appstream-qt
          xorg-xrdb xorg-xsetroot kactivitymanagerd kholidays xorg-xmessage milou prison kwin
          plasma-integration kpeople kactivities-stats libkscreen kquickcharts kuserfeedback
-         accountsservice kio-extras kio-fuse qt5-tools)
+         accountsservice kio-extras kio-fuse qt5-tools oxygen-sounds)
 makedepends=(extra-cmake-modules kdoctools gpsd baloo networkmanager-qt plasma-wayland-protocols kunitconversion kinit)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgbase-$pkgver.tar.xz{,.sig} kde.pam)
-sha256sums=('5b0e40b090d6bd1fe1f902a60633e4417ce711b34c32bfd2fce5b16bb9b2ec70'
+sha256sums=('1368df30e17edb7f58418e9822b21e68748d4251d66d069c4aa383af474f36de'
             'SKIP'
             '00090291204baabe9d6857d3b1419832376dd2e279087d718b64792691e86739')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
