--- a/kde/kinfocenter/PKGBUILD
+++ b/kde/kinfocenter/PKGBUILD
@@ -4,17 +4,18 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kinfocenter
-pkgver=5.24.4
+pkgver=5.25.1
 pkgrel=1
 pkgdesc='A utility that provides information about a computer system'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
-depends=(systemsettings glu vulkan-tools wayland-utils xorg-xdpyinfo mesa-utils)
+depends=(systemsettings glu vulkan-tools wayland-utils xorg-xdpyinfo mesa-utils aha dmidecode)
+depends_x86_64=(fwupd)
 makedepends=(extra-cmake-modules plasma-framework kdoctools)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('dc5b84964de4b68e45300477039c656d622a9546340e997eb8249de6a532b838'
+sha256sums=('d8d57620777c955f0aa2e25ce9205be052cdbb962d166effbec1a3ff01ced15f'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
