--- a/kde/kwrited/PKGBUILD
+++ b/kde/kwrited/PKGBUILD
@@ -4,17 +4,17 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kwrited
-pkgver=5.24.4
+pkgver=5.25.1
 pkgrel=1
 pkgdesc='KDE daemon listening for wall and write messages'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
-depends=(kpty knotifications kdbusaddons)
+depends=(kpty knotifications kdbusaddons oxygen-sounds)
 makedepends=(extra-cmake-modules kdoctools)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('62d700b673102f2740ed34e305902260c7035f5c8cc6ef19494a98f3088c0649'
+sha256sums=('1feebec258096c8d88a4b7108c585f2ab4a792e35c1acc98b0606ffe67a2f83e'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
