--- a/kde/kwayland-integration/PKGBUILD
+++ b/kde/kwayland-integration/PKGBUILD
@@ -2,17 +2,17 @@
 # Maintainer:Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kwayland-integration
-pkgver=5.24.4
+pkgver=5.25.1
 pkgrel=1
 pkgdesc='Provides integration plugins for various KDE frameworks for the wayland windowing system'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
-depends=(kwindowsystem kidletime kwayland kguiaddons)
+depends=(kwindowsystem kidletime kwayland)
 makedepends=(extra-cmake-modules wayland-protocols)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('d2e74baa0e2966b92330b8df7567b0b1cc85a71ea24c3f453da39aed035aceb2'
+sha256sums=('412c470210593e0d3624370edf8d17f5a58145bafd3b7a2e8f5377e48ecc00e5'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
