--- a/llvm/PKGBUILD
+++ b/llvm/PKGBUILD
@@ -2,110 +2,67 @@
 # Maintainer: Evangelos Foutras <evangelos@foutrelis.com>
 # Contributor: Jan "heftig" Steffens <jan.steffens@gmail.com>
 
-pkgname=('llvm' 'llvm-libs' 'llvm-ocaml')
-pkgver=13.0.1
-pkgrel=6
-_ocaml_ver=4.13.1
+pkgname=('llvm' 'llvm-libs')
+pkgver=14.0.6
+pkgrel=1
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://llvm.org/"
 license=('custom:Apache 2.0 with LLVM Exception')
 makedepends=('cmake' 'ninja' 'libffi' 'libedit' 'ncurses' 'libxml2'
-             "ocaml>=$_ocaml_ver" 'ocaml-ctypes' 'ocaml-findlib'
              'python-setuptools' 'python-psutil' 'python-sphinx'
              'python-recommonmark')
 options=('staticlibs' '!lto') # Getting thousands of test failures with LTO
 _source_base=https://github.com/llvm/llvm-project/releases/download/llvmorg-$pkgver
-source=($_source_base/$pkgname-$pkgver.src.tar.xz{,.sig}
-        don-t-accept-nullptr-as-GEP-element-type.patch
-        don-t-override-__attribute__-no_stack_protector.patch
-        don-t-move-DBG_VALUE-instructions.patch
-        no-strict-aliasing-DwarfCompileUnit.patch
-        disable-A-B-A-B-and-BSWAP-in-InstCombine.patch
-        disable-DIArgList-in-SPIR-V.patch
-        llvm-config.h
-        build-any.patch
-        riscv-generic.patch
-        backport-riscv-insn-directive.patch::https://github.com/llvm/llvm-project/commit/283879793dc787225992496587581ec77b6b0610.patch)
-sha256sums=('ec6b80d82c384acad2dc192903a6cf2cdbaffb889b84bfb98da9d71e630fc834'
+source=($_source_base/llvm-$pkgver.src.tar.xz{,.sig}
+        llvm-config.h)
+sha256sums=('050922ecaaca5781fdf6631ea92bc715183f202f9d2f15147226f023414f619a'
             'SKIP'
-            'a7e902a7612d0fdabe436a917468b043cc296bc89d8954bfc3126f737beb9ac4'
-            '9f0a4578b94eb8853b83af2f65e92705254b4b56d96f9a941714d174b932f465'
-            'f7d69f84241416398fdb3df8bb44f9fae3c49d89889c7ffa3b37aa2e9d78f708'
-            'd1eff24508e35aae6c26a943dbaa3ef5acb60a145b008fd1ef9ac6f6c4faa662'
-            '34cc0d79a30599cb2287b47b4e9a1a5bf03d57a1f8bb35be3fe976ffc4a604f6'
-            '8642da2d556092e4284873ba6ddc6c9a67841f42cc16f923bcd523e4b304a3ff'
-            '597dc5968c695bbdbb0eac9e8eb5117fcd2773bc91edf5ec103ecffffab8bc48'
-            'fa49cb1e9107d8d151a419d3c09f231f9fa42b8ea77a87de0392b44a7ea0076e'
-            '5c53e41a4011e7c65c43ed3871c09b544df9f73e35d09914d4463b2f9103b84e'
-            '03917e6e558a2de500aa59478e66aaff317d338c2282345d1d4d85fda4e3bf4d')
+            '597dc5968c695bbdbb0eac9e8eb5117fcd2773bc91edf5ec103ecffffab8bc48')
 validpgpkeys+=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D') # Hans Wennborg <hans@chromium.org>
 validpgpkeys+=('474E22316ABF4785A88C6E8EA2C794A986419D8A') # Tom Stellard <tstellar@redhat.com>
 
 prepare() {
-  cd "$srcdir/llvm-$pkgver.src"
+  cd llvm-$pkgver.src
   mkdir build
-
-  # https://github.com/intel/intel-graphics-compiler/issues/204
-  patch -Rp2 -i ../don-t-accept-nullptr-as-GEP-element-type.patch
-
-  # Fixes Chromium error "*** stack smashing detected ***: terminated"
-  # (which also goes away with "--change-stack-guard-on-fork=disabled")
-  # https://reviews.llvm.org/D116589
-  patch -Np2 -i ../don-t-override-__attribute__-no_stack_protector.patch
-
-  # https://github.com/llvm/llvm-project/issues/53243
-  # https://github.com/rust-lang/rust/issues/92869
-  patch -Np2 -i ../don-t-move-DBG_VALUE-instructions.patch
-
-  # Work around intermittent 'clang -O -g' crashes
-  # https://bugs.llvm.org/show_bug.cgi?id=50611#c3
-  patch -Np2 -i ../no-strict-aliasing-DwarfCompileUnit.patch
-
-  # Patches needed for ISPC for Xe only
-  patch -Np2 -i ../disable-A-B-A-B-and-BSWAP-in-InstCombine.patch
-  patch -Np2 -i ../disable-DIArgList-in-SPIR-V.patch
-
-  patch -Np1 -i ${srcdir}/build-any.patch
-  patch -Np1 -i ${srcdir}/riscv-generic.patch
-
-  # Related: https://github.com/rust-lang/stdarch/issues/1291
-  patch -Np2 -i ../backport-riscv-insn-directive.patch
 }
 
 build() {
-  cd "$srcdir/llvm-$pkgver.src/build"
+  cd llvm-$pkgver.src/build
 
   local cmake_args=(
     -G Ninja
     -DCMAKE_BUILD_TYPE=Release
+    -DCMAKE_INSTALL_DOCDIR=share/doc
     -DCMAKE_INSTALL_PREFIX=/usr
     -DCMAKE_SKIP_RPATH=ON
     -DLLVM_BINUTILS_INCDIR=/usr/include
     -DLLVM_BUILD_DOCS=ON
     -DLLVM_BUILD_LLVM_DYLIB=ON
     -DLLVM_BUILD_TESTS=ON
+    -DLLVM_ENABLE_BINDINGS=OFF
     -DLLVM_ENABLE_FFI=ON
     -DLLVM_ENABLE_RTTI=ON
     -DLLVM_ENABLE_SPHINX=ON
     -DLLVM_HOST_TRIPLE=$CHOST
+    -DLLVM_INCLUDE_BENCHMARKS=OFF
     -DLLVM_INSTALL_UTILS=ON
     -DLLVM_LINK_LLVM_DYLIB=ON
     -DSPHINX_WARNINGS_AS_ERRORS=OFF
   )
   cmake .. "${cmake_args[@]}"
-  ninja all ocaml_doc
+  ninja
 }
 
 check() {
-  cd "$srcdir/llvm-$pkgver.src/build"
+  cd llvm-$pkgver.src/build
   LD_LIBRARY_PATH=$PWD/lib ninja check
 }
 
 package_llvm() {
-  pkgdesc="Collection of modular and reusable compiler and toolchain technologies"
+  pkgdesc="Compiler infrastructure"
   depends=('llvm-libs' 'perl')
 
-  cd "$srcdir/llvm-$pkgver.src/build"
+  cd llvm-$pkgver.src/build
 
   DESTDIR="$pkgdir" ninja install
 
@@ -118,17 +75,15 @@ package_llvm() {
   mv -f "$pkgdir"/usr/lib/lib{LLVM,LTO,Remarks}*.so* "$srcdir"
   mv -f "$pkgdir"/usr/lib/LLVMgold.so "$srcdir"
 
-  # OCaml bindings go to a separate package
-  rm -rf "$srcdir"/ocaml.{lib,doc}
-  mv "$pkgdir/usr/lib/ocaml" "$srcdir/ocaml.lib"
-  mv "$pkgdir/usr/share/doc/$pkgname/ocaml-html" "$srcdir/ocaml.doc"
-
   if [[ $CARCH == x86_64 ]]; then
     # Needed for multilib (https://bugs.archlinux.org/task/29951)
     # Header stub is taken from Fedora
     mv "$pkgdir/usr/include/llvm/Config/llvm-config"{,-64}.h
     cp "$srcdir/llvm-config.h" "$pkgdir/usr/include/llvm/Config/llvm-config.h"
   fi
+
+  # Remove documentation sources
+  rm -r "$pkgdir"/usr/share/doc/llvm/html/{_sources,.buildinfo}
 
   install -Dm644 ../LICENSE.TXT "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
 }
@@ -147,18 +102,6 @@ package_llvm-libs() {
   # https://bugs.archlinux.org/task/28479
   install -d "$pkgdir/usr/lib/bfd-plugins"
   ln -s ../LLVMgold.so "$pkgdir/usr/lib/bfd-plugins/LLVMgold.so"
-
-  install -Dm644 "$srcdir/llvm-$pkgver.src/LICENSE.TXT" \
-    "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
-}
-
-package_llvm-ocaml() {
-  pkgdesc="OCaml bindings for LLVM"
-  depends=('llvm' "ocaml>=$_ocaml_ver" 'ocaml-ctypes')
-
-  install -d "$pkgdir"/{usr/lib,usr/share/doc/$pkgname}
-  cp -a "$srcdir/ocaml.lib" "$pkgdir/usr/lib/ocaml"
-  cp -a "$srcdir/ocaml.doc" "$pkgdir/usr/share/doc/$pkgname/html"
 
   install -Dm644 "$srcdir/llvm-$pkgver.src/LICENSE.TXT" \
     "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
