--- a/pam-u2f/PKGBUILD
+++ b/pam-u2f/PKGBUILD
@@ -9,7 +9,7 @@ _name="${pkgname/-/_}"
 pkgver=1.2.0
 pkgrel=2
 pkgdesc='Universal 2nd Factor (U2F) PAM authentication module from Yubico'
-arch=('x86_64' 'powerpc64le')
+arch=('x86_64' 'powerpc64le' 'powerpc' 'riscv64')
 url='https://developers.yubico.com/pam-u2f'
 license=('BSD')
 replaces=("${_name}")
